# da728x-rs

./: Cargo.toml  README.md
examples/nrf54l15/: Cargo.toml
examples/nrf54l15/src/: main.rs
examples/rp2040/: Cargo.toml  README.md  build.rs  memory.x
examples/rp2040/examples/: simple_dro.rs  simple_waveform.rs  waveform_effects.rs  wideband_melody.rs
examples/rp2040/src/: main.rs
reference/: da7280.c
src/: config.rs  errors.rs  lib.rs  registers.rs  types.rs
src/waveform/: frame.rs  memory.rs  mod.rs  sequence.rs  snippet.rs
support/da7280_hal_1r0/: da7280.c  da7280.h  da7280_hal.h
